--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-opencv-python
 ultralytics
-numpy
+streamlit==1.28.2
+opencv-python-headless==4.9.0.80
+numpy==1.23.3
+pillow
 python-dotenv
